--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.21", features = ["derive", "wrap_help"] }
+homedir = "0.3.4"
 image = "0.25.0"
+iter_tools = "0.24.0"
+itertools = "0.13.0"
 quantette = "0.3.0"
 rayon = "1.10.0"
 
